--- a/index (2).html
+++ b/index (2).html
@@ -6,58 +6,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <title>Meteo App</title>
+    <link rel="stylesheet" href="src/styles.css" />
+    <title>My weather application</title>
   </head>
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form" id="search-form">
+        <form id="search-form">
           <input
             type="search"
             placeholder="Enter a city.."
             required
-            id="search-form-input"
-            class="search-form-input"
+            class="search-input"
+            id="search-input"
           />
-          <input type="submit" value="Search" class="search-form-button" />
+          <input type="submit" value="Search" class="search-button" />
         </form>
       </header>
       <main>
-        <div class="weather-app-data">
+        <div class="current-weather">
           <div>
-            <h1 class="weather-app-city" id="city"></h1>
-            <p class="weather-app-details">
-              Tuesday 14:49, scattered clouds
-              <br />
-              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+            <h1 class="current-city" id="current-city">Paris</h1>
+            <p class="current-details">
+              <span id="current-date"></span>, moderate rain <br />
+              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
             </p>
           </div>
-          <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">🌤️</div>
-            <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weatehr-app-unit">°C</div>
+          <div class="current-temperature">
+            <span class="current-temperature-icon">☀️</span
+            ><span class="current-temperature-value" id="current-temperature"
+              >24</span
+            ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
       </main>
-
       <footer>
-        This project was coded by
-        <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
-        is
-        <a href="https://github.com/matthieua/meteo" target="_blank"
-          >open-sourced on GitHub</a
-        >
-        and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
-          >hosted on Netlify</a
-        >
+        <p>
+          This project was coded by
+          <a href="https://github.com/Sipokuhle95" target="_blank">Sipokuhle</a> and is
+          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="#" target="_blank">hosted on Netlify</a>
+        </p>
       </footer>
     </div>
-    <script src="src/index.js"></script>
   </body>
+  <script src="src/index.js"></script>
 </html>
